--- a/index.html
+++ b/index.html
@@ -1,23 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" type = "text/css" href = "style.css">
-  <link href="https://fonts.googleapis.com/css?family=Aclonica|Ubuntu:300,400" rel="stylesheet">
-  <title id = "title">8 more hours</title>
-</head>
-<body>
-  <div class="container">
-    <div class = "timer">
-      <span id = "timer"></span>
-      <button onclick = "addten()">I just had a 10 minutes break</button>
-      <button id = "refresh" onclick = "reset()">A</button>
-    </div>
-  </div>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  </head>
+  <body>
 
-  <script src = "https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.js"></script>
-  <script src = "tock.js"></script>
-  <script src = "script.js"></script>
+<script type="text/javascript">
+request = new XMLHttpRequest();
+request.open('GET', 'https://bitpay.com/api/rates', true);
 
-</body>
+request.onload = function() {
+if (request.status >= 200 && request.status < 400){
+  // Success!
+  var data = JSON.parse(request.responseText);
+  console.log(data[1]);
+  console.log(data[1].code);
+  console.log(data[1].rate);
+} else {
+  // We reached our target server, but it returned an error
+
+}
+};
+
+request.onerror = function() {
+// There was a connection error of some sort
+};
+
+request.send();
+</script>
+  </body>
 </html>
